unpackaged/main/default/objects/d_wh__Callout_Response_Action__c/d_wh__Callout_Response_Action__c.object-meta.xml
<CustomObject>
    <label>Callout Response Action</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Response Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>