unpackaged/main/default/objects/d_wh__Callout_Response_Action__c/fields/d_wh__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>