unpackaged/main/default/objects/d_wh__Callout_Response_Action__c/fields/d_wh__Order__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>