unpackaged/main/default/objects/d_wh__Callout_Response_Action__c/fields/d_wh__Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Update Main Record</fullName>
            </value>
            <value>
                <fullName>Create New Record</fullName>
            </value>
            <value>
                <fullName>Update Related Record</fullName>
            </value>
            <value>
                <fullName>Run Apex</fullName>
            </value>
            <value>
                <fullName>Upsert Single Record</fullName>
            </value>
            <value>
                <fullName>Upsert List of Records</fullName>
            </value>
            <value>
                <fullName>Run Autolaunched Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>